# Operating-Systems-labs-2023

lab1/: CMakeLists.txt  CmakeLists.txt  README.md  build.sh  config.conf  config.txt  main  main.cpp
lab1/Daemon/: Daemon.cpp  Daemon.hpp
lab2/: CMakeLists.txt  README.md  build.sh
lab2/client/: client.cpp  client.h
lab2/conn/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h
lab2/connections/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h
lab2/host/: host.cpp  hostHandler.cpp  hostHandler.h
lab2/utils/: configuration.h  message.h
lab3/: CMakeLists.txt  README.md  build.sh  config.txt  main.cpp
lab3/queue/: mcmp_queue.hpp  queue.hpp
lab3/test/: test.cpp  test.h
